src/objects/Sales_Order_Header__c/Sales_Order_Header__c.object-meta.xml
<CustomObject>
    <label>Sales Order</label>
    <nameField>
        <label>Sales Order Header</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>