src/objects/Sales_Order_Header__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <inlineHelpText>The Currency of the Sales Order Total Amount.</inlineHelpText>
    <label>Currency</label>
    <length>5</length>
    <type>Text</type>
</CustomField>