src/objects/Sales_Order_Header__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <label>Purchase Order Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>