src/objects/Sales_Order_Header__c/fields/Sales_Order_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Total_Amount__c</fullName>
    <label>Sales Order Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>