src/objects/Sales_Order_Header__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>