src/objects/Sales_Order_Header__c/fields/Total_Base__c.field-meta.xml
<CustomField>
    <fullName>Total_Base__c</fullName>
    <label>Total Base</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>