src/objects/Sales_Order_Header__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Sales_Order_Total_Amount__c</columns>
    <columns>Sales_Order_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Segment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>