src/objects/Sales_Order_Header__c/listViews/Italy_Sales_Orders.listView-meta.xml
<ListView>
    <fullName>Italy_Sales_Orders</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Sales_Order_Total_Amount__c</columns>
    <columns>Sales_Order_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Segment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Segment__c</field>
        <operation>equals</operation>
        <value>45</value>
    </filters>
    <label>Italy Sales Orders</label>
    <language>en_US</language>
</ListView>