src/objects/Sales_Order_Header__c/listViews/Sales_Order_by_Status.listView-meta.xml
<ListView>
    <fullName>Sales_Order_by_Status</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <label>Sales Order by Status</label>
    <language>en_US</language>
</ListView>