src/objects/Sales_Order_Header__c/listViews/sales_orders.listView-meta.xml
<ListView>
    <fullName>sales_orders</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OBJECT_ID</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <label>sales orders</label>
</ListView>